# emotion_xai_project_clean

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  MANIFEST.in  PROJECT_PLAN.md  README.md  README_HF_SPACES.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_gradio.txt  run_production_training.sh  setup.cfg  usage_examples.py
.github/workflows/: ci.yml
app/: __init__.py  gradio_app.py  streamlit_app.py
config/: default.yaml  development.yaml  mac_optimizations.yaml  production.yaml
docker/: Dockerfile  requirements.txt
docs/: README.md  development.md  documentation_report.md  getting_started.md  mac_optimization.md  project_plan.md
emotion_xai/: __init__.py  cli.py
emotion_xai/clustering/: __init__.py  analysis.py  embeddings.py  feedback_clustering.py
emotion_xai/data/: __init__.py  preprocessing.py
emotion_xai/explainability/: __init__.py  explanations.py  lime_utils.py  plot_manager.py  visualizations.py
emotion_xai/models/: __init__.py  baseline.py  transformer.py
emotion_xai/utils/: __init__.py  config.py  device.py
notebooks/: 01_data_exploration.ipynb  02_finetuning.ipynb  02_modeling.ipynb  03_explainability.ipynb  03_finetuning.ipynb  04_clustering_analysis.ipynb  04_explainability.ipynb  05_clustering_analysis.ipynb
scripts/: download_goemotions.py  generate_explanation_plots.py  test_clustering.py  test_improved_plotting.py  test_phase4_completion.py  train_transformer_production.py  use_trained_model.py
src/: baseline_model.py  cluster_feedback.py  explain_model.py  preprocess.py  train_transformer.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: test_pipeline.py
tests/unit/: test_baseline.py  test_preprocessing.py
